[tool.poetry]
name = "repl_python3_ytdl"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
schedule = "^1.1.0"
Flask = "^2.0.2"
moviepy = "^1.0.3"
pytube = "^11.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
